# Austin-Rent

./: .gitignore  .pre-commit-config.yaml  AustinRent.code-workspace  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: gcp-terraform-architect.md
.devcontainer/: devcontainer.json  set-up-devcontainer.sh
.github/actions/parse-config/: action.yaml
.github/cicd/: .gitignore  README.md  package-lock.json  package.json  parse-config.js  pipe_config.json
.github/cicd/tests/: config-parser.test.ts
.github/workflows/: codeql-analysis.yml  flyway-migration.yaml  google-cloud-run-deploy.yaml  linter.yaml
bs-crawler/: Dockerfile  README.md
bs-crawler/bs-crawler/: main.py
bs-crawler/bs-crawler/config/: logging.py
bs-crawler/bs-crawler/utils/: bucket_utils.py
bs-crawler/storage/request_queues/default/: WCJHwnKoF1xWGYF.json  __metadata__.json
discord-logger/: Dockerfile  README.md  go.mod  go.sum
discord-logger/infra/: dev.yaml
discord-logger/src/: config.go  handlers.go  main.go  main_test.go  models.go  utils.go
extractor/: Dockerfile
extractor/configs/: dev.yaml
extractor_repo/: README.md
my-crawler/: pyproject.toml
my-crawler/storage/datasets/default/: 000000001.json  000000002.json  (+20 more)
notification/: .dockerignore  .env.example  .gitignore  Dockerfile  pytest.ini  requirements.txt  setup.py
notification/notification/: main.py  settings.py
notification/tests/: test_discord_formatter.py  test_webhook_handler.py
opentofu_repo/: .terraform.lock.hcl  README.md  backend.tf  cloud_sql.tf  enable_api.tf  github.tf  main.tf  terraform.tfvars  variables.tf
opentofu_repo/scraper-module/: compute.tf  database.tf  pubsub.tf  storage.tf  variables.tf
prompts/: prompt-gen.md
scraper/: Dockerfile  README.md  pyproject.toml
scraper/.claude/agents/: pre-commit-fixer.md
scraper/bs-crawler/: Buildings.py  __main__.py  dev_main.py  extended_request.py  main.py  routes.py  simple_webserver.py
scraper/bs-crawler/config/: logging.py  settings.py
scraper/bs-crawler/db/: __init__.py  base.py  dummy_model.py  scrape_response_dao.py  scrape_response_model.py  sql_connect.py
scraper/bs-crawler/db/building/: building_dao.py  building_model.py
scraper/bs-crawler/db/scrape_response/: scrape_response_dao.py  scrape_response_model.py
scraper/bs-crawler/utils/: bucket_utils.py  secret_utils.py  simple_webserver.py
scraper/configs/: dev.yaml
scraper/db-migrations/: V0__buildings.sql  V1__scrape_responses.sql  V2__scrape_extraction.sql  v2__extractions.sql
scraper/infra/: dev.yaml  local.yaml
scraper/scraper/: Buildings.py  __main__.py  buildings.py  conftest.py  main.py  routes.py
scraper/scraper/config/: logging.py  secret_manager.py  settings.py
scraper/scraper/db/: base.py  sql_connect.py
scraper/scraper/db/building/: building_dao.py  building_model.py
scraper/scraper/db/scrape_extraction/: extraction_dao.py  extraction_model.py
scraper/scraper/db/scrape_response/: scrape_response_dao.py  scrape_response_model.py
scraper/scraper/handlers/: handler.py.unused  handler_utils.py  html_handler.py  json_handler.py  models.py  routes.py
scraper/scraper/tests/: test_demo.py  test_html_handler.py  test_secret_manager.py  test_secret_manager.py.bak  test_signmap_extraction.py
scraper/scraper/tests/resources/: sightmap.json
scraper/scraper/utils/: bucket_utils.py  secret_utils.py  simple_webserver.py
scraper/storage/request_queues/default/: WCJHwnKoF1xWGYF.json  __metadata__.json  ntWUsKSPofbfOU2.json  xMI8mB7yETk8KJz.json
(+990 files in other folders)
